Updates for v2 arch